--- a/index.html
+++ b/index.html
@@ -369,7 +369,10 @@
                     Bonjour, je suis <span class="name gradient-text">Aurès Assogba-zehe</span>
                 </h1>
                 <div class="text-xl md:text-2xl text-slate-300">
-                    <span class="typing-animation"></span>
+                    <div>
+                        >_
+                        <span class="typing-animation"></span>
+                    </div>
                 </div>
                 <p class="text-lg text-slate-400">
                     Je crée des applications web modernes et performantes avec les dernières technologies.
@@ -388,8 +391,8 @@
             <div class="relative flex justify-center">
                 <div
                     class="relative w-64 h-64 md:w-80 md:h-80 rounded-full overflow-hidden border-4 border-slate-700 shadow-xl">
-                    <img src="./public/images/aures-illustration.png"
-                        alt="Photo de profil" class="w-full h-full object-cover">
+                    <img src="./public/images/aures-illustration.png" alt="Photo de profil"
+                        class="w-full h-full object-cover">
                 </div>
                 <div
                     class="absolute -bottom-5 -left-5 w-24 h-24 rounded-full bg-gradient-to-r from-purple-600 to-pink-600 opacity-20 blur-xl">
@@ -671,8 +674,8 @@
                 <div class="project-inner relative w-full h-full">
                     <div class="project-front absolute w-full h-full bg-slate-800 p-6 flex flex-col">
                         <div class="flex-1 bg-slate-700 rounded-lg overflow-hidden mb-4">
-                            <img src="./public/images/project-ov.png"
-                                alt="Projet 1" class="w-full h-full object-cover contains">
+                            <img src="./public/images/project-ov.png" alt="Projet 1"
+                                class="w-full h-full object-cover contains">
                         </div>
                         <h3 class="text-xl font-bold">Plateforme E-commerce</h3>
                         <p class="text-slate-400 text-sm">React, Node.js, MongoDB</p>
@@ -709,8 +712,7 @@
                 <div class="project-inner relative w-full h-full">
                     <div class="project-front absolute w-full h-full bg-slate-800 p-6 flex flex-col">
                         <div class="flex-1 bg-slate-700 rounded-lg overflow-hidden mb-4">
-                            <img src="./public/images/project-ov.png"
-                                alt="Projet 2" class="w-full h-full object-cover">
+                            <img src="./public/images/project-ov.png" alt="Projet 2" class="w-full h-full object-cover">
                         </div>
                         <h3 class="text-xl font-bold">Application de gestion</h3>
                         <p class="text-slate-400 text-sm">Vue.js, Python, PostgreSQL</p>
@@ -747,8 +749,7 @@
                 <div class="project-inner relative w-full h-full">
                     <div class="project-front absolute w-full h-full bg-slate-800 p-6 flex flex-col">
                         <div class="flex-1 bg-slate-700 rounded-lg overflow-hidden mb-4">
-                            <img src="./public/images/project-ov.png"
-                                alt="Projet 3" class="w-full h-full object-cover">
+                            <img src="./public/images/project-ov.png" alt="Projet 3" class="w-full h-full object-cover">
                         </div>
                         <h3 class="text-xl font-bold">Réseau social</h3>
                         <p class="text-slate-400 text-sm">React, GraphQL, Firebase</p>
@@ -785,8 +786,7 @@
                 <div class="project-inner relative w-full h-full">
                     <div class="project-front absolute w-full h-full bg-slate-800 p-6 flex flex-col">
                         <div class="flex-1 bg-slate-700 rounded-lg overflow-hidden mb-4">
-                            <img src="./public/images/project-ov.png"
-                                alt="Projet 4" class="w-full h-full object-cover">
+                            <img src="./public/images/project-ov.png" alt="Projet 4" class="w-full h-full object-cover">
                         </div>
                         <h3 class="text-xl font-bold">Tableau de bord analytique</h3>
                         <p class="text-slate-400 text-sm">Vue.js, D3.js, Express</p>
@@ -823,8 +823,7 @@
                 <div class="project-inner relative w-full h-full">
                     <div class="project-front absolute w-full h-full bg-slate-800 p-6 flex flex-col">
                         <div class="flex-1 bg-slate-700 rounded-lg overflow-hidden mb-4">
-                            <img src="./public/images/project-ov.png"
-                                alt="Projet 5" class="w-full h-full object-cover">
+                            <img src="./public/images/project-ov.png" alt="Projet 5" class="w-full h-full object-cover">
                         </div>
                         <h3 class="text-xl font-bold">Application mobile</h3>
                         <p class="text-slate-400 text-sm">React Native, Firebase</p>
@@ -861,8 +860,7 @@
                 <div class="project-inner relative w-full h-full">
                     <div class="project-front absolute w-full h-full bg-slate-800 p-6 flex flex-col">
                         <div class="flex-1 bg-slate-700 rounded-lg overflow-hidden mb-4">
-                            <img src="./public/images/project-ov.png"
-                                alt="Projet 6" class="w-full h-full object-cover">
+                            <img src="./public/images/project-ov.png" alt="Projet 6" class="w-full h-full object-cover">
                         </div>
                         <h3 class="text-xl font-bold">Portfolio artistique</h3>
                         <p class="text-slate-400 text-sm">Next.js, Tailwind CSS, Sanity</p>
@@ -1208,17 +1206,43 @@
         });
 
         // Typing animation
-        const typingText = "Développeur Fullstack passionné";
-        const typingElement = document.querySelector('.typing-animation');
-        let i = 0;
+        const professions = [
+            "Développeur Fullstack",
+            "Spécialiste React",
+            "Passionné de Node.js",
+            "Designer d'interfaces",
+            "Solutionneur de problèmes"
+        ];
 
-        function typeWriter() {
-            if (i < typingText.length) {
-                typingElement.innerHTML += typingText.charAt(i);
-                i++;
-                setTimeout(typeWriter, 100);
+        let currentProfession = 0;
+        let charIndex = 0;
+        let isDeleting = false;
+        let isEnd = false;
+
+        function typeProfession() {
+            const typingElement = document.querySelector('.typing-animation');
+            const currentText = professions[currentProfession];
+
+            if (isDeleting) {
+                typingElement.textContent = currentText.substring(0, charIndex--);
+                if (charIndex === 0) {
+                    isDeleting = false;
+                    currentProfession = (currentProfession + 1) % professions.length;
+                }
+            } else {
+                typingElement.textContent = currentText.substring(0, charIndex++);
+                if (charIndex === currentText.length + 1) {
+                    isEnd = true;
+                    isDeleting = true;
+                }
             }
+
+            const speed = isDeleting ? 50 : isEnd ? 200 : 100;
+            setTimeout(typeProfession, speed);
         }
+
+        // Démarrer l'animation
+        typeProfession();
 
         // Flip card functionality
         document.querySelectorAll('.project-card').forEach(card => {
