--- a/index.html
+++ b/index.html
@@ -7,279 +7,7 @@
     <title>Portfolio Aurès Assogba-zehe</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
-
-        body {
-            font-family: 'Poppins', sans-serif;
-            background-color: #0f172a;
-            color: #f8fafc;
-            scroll-behavior: smooth;
-            transition: all 0.5s ease;
-        }
-
-        body.light-mode {
-            background-color: #f8fafc;
-            color: #0f172a;
-        }
-
-        /* Violet color scheme */
-        .bg-primary {
-            background-color: #7e22ce;
-        }
-
-        .text-primary {
-            color: #7e22ce;
-        }
-
-        .border-primary {
-            border-color: #7e22ce;
-        }
-
-        .gradient-text {
-            background: linear-gradient(90deg, #7e22ce, #a855f7, #d946ef);
-            -webkit-background-clip: text;
-            background-clip: text;
-            color: transparent;
-        }
-
-        /* Light mode adjustments */
-        .light-mode .bg-slate-800 {
-            background-color: #e2e8f0;
-        }
-
-        .light-mode .bg-slate-900 {
-            background-color: #f1f5f9;
-        }
-
-        .light-mode .text-slate-400 {
-            color: #64748b;
-        }
-
-        .light-mode .text-slate-300 {
-            color: #475569;
-        }
-
-        .light-mode .bg-slate-700 {
-            background-color: #cbd5e1;
-        }
-
-        .light-mode .border-slate-600 {
-            border-color: #94a3b8;
-        }
-
-        .light-mode .text-white {
-            color: #0f172a;
-        }
-
-        /* Animations */
-        .section {
-            opacity: 0;
-            transform: translateY(20px);
-            transition: all 0.6s ease-out;
-        }
-
-        .section-visible {
-            opacity: 1;
-            transform: translateY(0);
-        }
-
-        .card-hover {
-            transition: all 0.3s ease;
-        }
-
-        .card-hover:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.2);
-        }
-
-        .tech-icon {
-            transition: all 0.3s ease;
-        }
-
-        .tech-icon:hover {
-            transform: scale(1.15);
-        }
-
-        .floating {
-            animation: floating 6s ease-in-out infinite;
-        }
-
-        @keyframes floating {
-            0% {
-                transform: translateY(0px);
-            }
-
-            50% {
-                transform: translateY(-15px);
-            }
-
-            100% {
-                transform: translateY(0px);
-            }
-        }
-
-        .nav-link {
-            position: relative;
-        }
-
-        .nav-link::after {
-            content: '';
-            position: absolute;
-            width: 0;
-            height: 2px;
-            bottom: -2px;
-            left: 0;
-            background: linear-gradient(90deg, #7e22ce, #a855f7);
-            transition: width 0.3s ease;
-        }
-
-        .nav-link:hover::after {
-            width: 100%;
-        }
-
-        /* Cursor effect */
-        .cursor {
-            position: fixed;
-            width: 20px;
-            height: 20px;
-            border-radius: 50%;
-            background: #7e22ce;
-            transform: translate(-50%, -50%);
-            pointer-events: none;
-            mix-blend-mode: difference;
-            z-index: 9999;
-            transition: transform 0.2s;
-        }
-
-        .cursor-follower {
-            position: fixed;
-            width: 40px;
-            height: 40px;
-            border-radius: 50%;
-            background: rgba(126, 34, 206, 0.3);
-            transform: translate(-50%, -50%);
-            pointer-events: none;
-            z-index: 9998;
-            transition: transform 0.4s, width 0.3s, height 0.3s;
-        }
-
-        .cursor.active {
-            transform: translate(-50%, -50%) scale(1.5);
-            background: #d946ef;
-        }
-
-        .cursor-follower.active {
-            transform: translate(-50%, -50%) scale(1.3);
-            background: rgba(217, 70, 239, 0.4);
-        }
-
-        /* Dark/light mode toggle */
-        .toggle-checkbox:checked {
-            right: 0;
-            border-color: #7e22ce;
-        }
-
-        .toggle-checkbox:checked+.toggle-label {
-            background: #7e22ce;
-        }
-
-        /* Name styling */
-        .name {
-            display: inline-block;
-            white-space: nowrap;
-        }
-
-        /* Flip card effect */
-        .project-card {
-            perspective: 1000px;
-            height: 320px;
-            transform-style: preserve-3d;
-            transition: all 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-        }
-
-        .project-card:hover {
-            transform: translateY(-10px) rotateX(5deg) rotateY(5deg);
-            box-shadow: 0 25px 40px rgba(0, 0, 0, 0.2);
-        }
-
-        .project-card:hover .project-front {
-            box-shadow: inset 0 0 0 2px rgba(255, 255, 255, 0.1);
-        }
-
-        .project-inner {
-            position: relative;
-            width: 100%;
-            height: 100%;
-            transition: transform 0.6s;
-            transform-style: preserve-3d;
-        }
-
-        .project-card.flipped .project-inner {
-            transform: rotateY(180deg);
-        }
-
-        .project-front,
-        .project-back {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            backface-visibility: hidden;
-            border-radius: 0.75rem;
-            overflow: hidden;
-        }
-
-        .project-back {
-            transform: rotateY(180deg);
-        }
-
-        /* Infinite horizontal scroll for technologies */
-        .tech-scroll-container {
-            width: 100%;
-            overflow: hidden;
-            position: relative;
-        }
-
-        .tech-scroll {
-            display: flex;
-            width: max-content;
-            animation: scroll 30s linear infinite;
-        }
-
-        .tech-scroll:hover {
-            animation-play-state: paused;
-        }
-
-        @keyframes scroll {
-            0% {
-                transform: translateX(0);
-            }
-
-            100% {
-                transform: translateX(-50%);
-            }
-        }
-
-        @media (max-width: 640px) {
-            .name {
-                display: block;
-                white-space: normal;
-            }
-
-            .tech-scroll {
-                animation: scroll 20s linear infinite;
-            }
-        }
-
-        nav.scrolled-up {
-            transform: translateY(0);
-            box-shadow: 0 4px 30px rgba(0, 0, 0, 0.3);
-        }
-
-        nav.scrolled-down {
-            transform: translateY(-100%);
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body class="min-h-screen">
@@ -417,8 +145,7 @@
             <div class="relative">
                 <div class="floating">
                     <div class="relative w-full h-full bg-slate-800 rounded-xl overflow-hidden shadow-2xl">
-                        <img src="./public/images/aures-about.png"
-                            alt="Code" class="w-full h-full object-cover">
+                        <img src="./public/images/aures-about.png" alt="Code" class="w-full h-full object-cover">
                         <div class="absolute inset-0 bg-gradient-to-t from-slate-900/80 to-transparent"></div>
                         <div class="absolute bottom-0 left-0 p-6">
                             <h3 class="text-xl font-bold">5+ années d'expérience</h3>
@@ -1043,275 +770,7 @@
         <i class="fas fa-arrow-up"></i>
     </button>
 
-    <script>
-        // Mobile menu toggle
-        const mobileMenuButton = document.getElementById('mobile-menu-button');
-        const mobileMenu = document.getElementById('mobile-menu');
-
-        mobileMenuButton.addEventListener('click', () => {
-            mobileMenu.classList.toggle('hidden');
-        });
-
-        // Smooth scrolling for navigation links
-        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-            anchor.addEventListener('click', function (e) {
-                e.preventDefault();
-
-                const targetId = this.getAttribute('href');
-                const targetElement = document.querySelector(targetId);
-
-                window.scrollTo({
-                    top: targetElement.offsetTop - 80,
-                    behavior: 'smooth'
-                });
-
-                // Close mobile menu if open
-                mobileMenu.classList.add('hidden');
-            });
-        });
-
-        // Back to top button
-        const backToTopButton = document.getElementById('back-to-top');
-
-        window.addEventListener('scroll', () => {
-            if (window.pageYOffset > 300) {
-                backToTopButton.classList.remove('opacity-0', 'invisible');
-                backToTopButton.classList.add('opacity-100', 'visible');
-            } else {
-                backToTopButton.classList.remove('opacity-100', 'visible');
-                backToTopButton.classList.add('opacity-0', 'invisible');
-            }
-        });
-
-        backToTopButton.addEventListener('click', () => {
-            window.scrollTo({
-                top: 0,
-                behavior: 'smooth'
-            });
-        });
-
-        // Form submission
-        const contactForm = document.getElementById('contact-form');
-
-        contactForm.addEventListener('submit', (e) => {
-            e.preventDefault();
-
-            // Here you would typically send the form data to a server
-            // For this example, we'll just show an alert
-            alert('Merci pour votre message ! Je vous répondrai dès que possible.');
-            contactForm.reset();
-        });
-
-        // Custom cursor effect
-        const cursor = document.querySelector('.cursor');
-        const cursorFollower = document.querySelector('.cursor-follower');
-        const links = document.querySelectorAll('a, button, .clickable');
-
-        let posX = 0, posY = 0;
-        let mouseX = 0, mouseY = 0;
-
-        // Smoothing factor (0 < speed < 1)
-        const speed = 0.1;
-
-        function animate() {
-            // Calculate distance from cursor to mouse
-            let distX = mouseX - posX;
-            let distY = mouseY - posY;
-
-            // Ease out the movement
-            posX += distX * speed;
-            posY += distY * speed;
-
-            // Apply transforms
-            cursor.style.left = `${posX}px`;
-            cursor.style.top = `${posY}px`;
-            cursorFollower.style.left = `${posX}px`;
-            cursorFollower.style.top = `${posY}px`;
-
-            requestAnimationFrame(animate);
-        }
-
-        document.addEventListener('mousemove', (e) => {
-            mouseX = e.clientX;
-            mouseY = e.clientY;
-        });
-
-        links.forEach(link => {
-            link.addEventListener('mouseenter', () => {
-                cursor.classList.add('active');
-                cursorFollower.classList.add('active');
-
-                // Special effect for different link types
-                if (link.classList.contains('cta')) {
-                    cursorFollower.style.transform = 'translate(-50%, -50%) scale(2.5)';
-                    cursorFollower.style.opacity = '0.2';
-                }
-            });
-
-            link.addEventListener('mouseleave', () => {
-                cursor.classList.remove('active');
-                cursorFollower.classList.remove('active');
-                cursorFollower.style.transform = 'translate(-50%, -50%) scale(1)';
-                cursorFollower.style.opacity = '0.3';
-            });
-        });
-
-        // Start animation
-        animate();
-
-        // Dark/Light mode toggle
-        const toggle = document.getElementById('toggle');
-        const toggleMobile = document.getElementById('toggle-mobile');
-        const body = document.body;
-
-        // Check for saved user preference, if any, on load of the website
-        if (localStorage.getItem('theme') === 'light') {
-            body.classList.add('light-mode');
-            toggle.checked = true;
-            toggleMobile.checked = true;
-            document.querySelector('.fa-moon').classList.add('hidden');
-            document.querySelector('.fa-sun').classList.remove('hidden');
-        }
-
-        // Toggle desktop
-        toggle.addEventListener('change', () => {
-            if (toggle.checked) {
-                body.classList.add('light-mode');
-                localStorage.setItem('theme', 'light');
-                document.querySelector('.fa-moon').classList.add('hidden');
-                document.querySelector('.fa-sun').classList.remove('hidden');
-            } else {
-                body.classList.remove('light-mode');
-                localStorage.setItem('theme', 'dark');
-                document.querySelector('.fa-moon').classList.remove('hidden');
-                document.querySelector('.fa-sun').classList.add('hidden');
-            }
-        });
-
-        // Toggle mobile
-        toggleMobile.addEventListener('change', () => {
-            if (toggleMobile.checked) {
-                body.classList.add('light-mode');
-                localStorage.setItem('theme', 'light');
-                toggle.checked = true;
-                document.querySelector('.fa-moon').classList.add('hidden');
-                document.querySelector('.fa-sun').classList.remove('hidden');
-            } else {
-                body.classList.remove('light-mode');
-                localStorage.setItem('theme', 'dark');
-                toggle.checked = false;
-                document.querySelector('.fa-moon').classList.remove('hidden');
-                document.querySelector('.fa-sun').classList.add('hidden');
-            }
-        });
-
-        // Typing animation
-        const professions = [
-            "Développeur Fullstack",
-            "Spécialiste React",
-            "Passionné de Node.js",
-            "Designer d'interfaces",
-            "Solutionneur de problèmes"
-        ];
-
-        let currentProfession = 0;
-        let charIndex = 0;
-        let isDeleting = false;
-        let isEnd = false;
-
-        function typeProfession() {
-            const typingElement = document.querySelector('.typing-animation');
-            const currentText = professions[currentProfession];
-
-            if (isDeleting) {
-                typingElement.textContent = currentText.substring(0, charIndex--);
-                if (charIndex === 0) {
-                    isDeleting = false;
-                    currentProfession = (currentProfession + 1) % professions.length;
-                }
-            } else {
-                typingElement.textContent = currentText.substring(0, charIndex++);
-                if (charIndex === currentText.length + 1) {
-                    isEnd = true;
-                    isDeleting = true;
-                }
-            }
-
-            const speed = isDeleting ? 50 : isEnd ? 200 : 100;
-            setTimeout(typeProfession, speed);
-        }
-
-        // Démarrer l'animation
-        typeProfession();
-
-        // Flip card functionality
-        document.querySelectorAll('.project-card').forEach(card => {
-            const frontButton = card.querySelector('.project-front ');
-            const backButton = card.querySelector('.project-back button');
-
-            frontButton.addEventListener('click', () => {
-                card.classList.add('flipped');
-            });
-
-            backButton.addEventListener('click', () => {
-                card.classList.remove('flipped');
-            });
-        });
-
-        // Intersection Observer for section animations
-        const sections = document.querySelectorAll('.section');
-
-        const observerOptions = {
-            threshold: 0.1
-        };
-
-        const observer = new IntersectionObserver((entries, observer) => {
-            entries.forEach(entry => {
-                if (entry.isIntersecting) {
-                    entry.target.classList.add('section-visible');
-                    observer.unobserve(entry.target);
-                }
-            });
-        }, observerOptions);
-
-        sections.forEach(section => {
-            observer.observe(section);
-        });
-
-        // Start typing animation when hero section is visible
-        const heroObserver = new IntersectionObserver((entries) => {
-            if (entries[0].isIntersecting) {
-                typeWriter();
-                heroObserver.unobserve(entries[0].target);
-            }
-        }, { threshold: 0.5 });
-
-        heroObserver.observe(document.getElementById('home'));
-
-        // Visibilité de la navbar en fonction du scroll
-        let lastScroll = 0;
-        const navbar = document.querySelector('nav');
-
-        window.addEventListener('scroll', () => {
-            const currentScroll = window.pageYOffset;
-
-            if (currentScroll <= 0) {
-                navbar.classList.remove('scrolled-up');
-                navbar.classList.remove('scrolled-down');
-                return;
-            }
-
-            if (currentScroll > lastScroll && !navbar.classList.contains('scrolled-down')) {
-                navbar.classList.remove('scrolled-up');
-                navbar.classList.add('scrolled-down');
-            } else if (currentScroll < lastScroll && navbar.classList.contains('scrolled-down')) {
-                navbar.classList.remove('scrolled-down');
-                navbar.classList.add('scrolled-up');
-            }
-
-            lastScroll = currentScroll;
-        });
-    </script>
+    <script src="scripts.js"></script>
 </body>
 
 </html>
