update contact information and localization details in index.html

--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
         class="section pt-24 pb-16 md:pt-32 md:pb-24 px-4 sm:px-6 lg:px-8 max-w-7xl mx-auto min-h-screen flex items-center">
         <div class="grid grid-cols-1 md:grid-cols-2 gap-12 items-center">
             <div class="space-y-6">
-                <h1 class="text-4xl md:text-6xl font-bold leading-tight">
-                    Bonjour, je suis <span class="name gradient-text">Aurès Assogba-zehe</span>
+                <h1 class="text-4xl md:text-6xl font-bold leading-tight ">
+                    Bonjour, je suis <span class="name gradient-text pb-6">Aurès Assogba-zehe</span>
                 </h1>
                 <div class="text-xl md:text-2xl text-slate-300">
                     <div>
@@ -176,15 +176,15 @@
                     </div>
                     <div class="flex items-center space-x-2">
                         <div class="w-2 h-2 rounded-full bg-pink-500"></div>
-                        <span class="text-slate-300">Email: <span class="text-white">aures@example.com</span></span>
+                        <span class="text-slate-300">Email: <span class="text-white">auresaz69@gmail.com</span></span>
                     </div>
                     <div class="flex items-center space-x-2">
                         <div class="w-2 h-2 rounded-full bg-indigo-500"></div>
-                        <span class="text-slate-300">Téléphone: <span class="text-white">+33 6 12 34 56 78</span></span>
+                        <span class="text-slate-300">Téléphone: <span class="text-white">+229 01 56 05 02 65</span></span>
                     </div>
                     <div class="flex items-center space-x-2">
                         <div class="w-2 h-2 rounded-full bg-blue-500"></div>
-                        <span class="text-slate-300">Localisation: <span class="text-white">Paris, France</span></span>
+                        <span class="text-slate-300">Localisation: <span class="text-white">Cotonou, Benin</span></span>
                     </div>
                 </div>
                 <div class="pt-6">
@@ -653,7 +653,7 @@
                         </div>
                         <div>
                             <h4 class="font-bold">Email</h4>
-                            <p class="text-slate-400">aures@example.com</p>
+                            <p class="text-slate-400">auresaz69@gmail.com</p>
                         </div>
                     </div>
                     <div class="flex items-start space-x-4">
@@ -662,7 +662,7 @@
                         </div>
                         <div>
                             <h4 class="font-bold">Téléphone</h4>
-                            <p class="text-slate-400">+33 6 12 34 56 78</p>
+                            <p class="text-slate-400">+229 01 56 05 02 65</p>
                         </div>
                     </div>
                     <div class="flex items-start space-x-4">
@@ -671,7 +671,7 @@
                         </div>
                         <div>
                             <h4 class="font-bold">Localisation</h4>
-                            <p class="text-slate-400">Paris, France</p>
+                            <p class="text-slate-400">Cotonou, Bénin</p>
                         </div>
                     </div>
                 </div>
@@ -682,14 +682,14 @@
                         <a href="#" class="p-3 bg-slate-800 rounded-lg hover:bg-blue-600 transition-all">
                             <i class="fab fa-linkedin-in text-blue-400"></i>
                         </a>
-                        <a href="#" class="p-3 bg-slate-800 rounded-lg hover:bg-blue-400 transition-all">
-                            <i class="fab fa-twitter text-blue-300"></i>
+                        <a href="#" class="p-3 bg-slate-800 rounded-lg hover:bg-green-400 transition-all">
+                            <i class="fab fa-whatsapp text-green-300"></i>
                         </a>
                         <a href="#" class="p-3 bg-slate-800 rounded-lg hover:bg-purple-600 transition-all">
                             <i class="fab fa-github text-purple-400"></i>
                         </a>
-                        <a href="#" class="p-3 bg-slate-800 rounded-lg hover:bg-pink-600 transition-all">
-                            <i class="fab fa-dribbble text-pink-400"></i>
+                        <a href="#" class="p-3 bg-slate-800 rounded-lg hover:bg-blue-600 transition-all">
+                            <i class="fa-brands fa-microsoft text-blue-400"></i>
                         </a>
                     </div>
                 </div>
