--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body class="min-h-screen">
@@ -796,7 +796,7 @@
         <i class="fas fa-arrow-up"></i>
     </button>
 
-    <script src="scripts.js"></script>
+    <script src="./scripts.js"></script>
 </body>
 
 </html>
