--- a/public/index.html
+++ b/public/index.html
@@ -14,15 +14,15 @@
     <meta property="og:type" content="website">
     <meta property="og:image" content="">
 
-    <link rel="apple-touch-icon" sizes="180x180" href="./public/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./public/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./public/favicon-16x16.png">
-    <link rel="manifest" href="./public/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="manifest" href="site.webmanifest">
 
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <link rel="stylesheet" href="public/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body class="min-h-screen">
@@ -135,7 +135,7 @@
             <div class="relative flex justify-center">
                 <div
                     class="relative w-64 h-64 md:w-80 md:h-80 rounded-full overflow-hidden border-4 border-slate-700 shadow-xl">
-                    <img src="./public/images/aures-illustration.png" alt="Photo de profil"
+                    <img src="images/aures-illustration.png" alt="Photo de profil"
                         class="w-full h-full object-cover">
                 </div>
                 <div
@@ -161,7 +161,7 @@
             <div class="relative">
                 <div class="floating">
                     <div class="relative w-full h-full bg-slate-800 rounded-xl overflow-hidden shadow-2xl">
-                        <img src="./public/images/aures-about.png" alt="Code" class="w-full h-full object-cover">
+                        <img src="images/aures-about.png" alt="Code" class="w-full h-full object-cover">
                         <div class="absolute inset-0 bg-gradient-to-t from-slate-900/80 to-transparent"></div>
                         <div class="absolute bottom-0 left-0 p-6">
                             <h3 class="text-xl font-bold">Steve Jobs</h3>
@@ -421,7 +421,7 @@
                 <div class="project-inner relative w-full h-full">
                     <div class="project-front absolute w-full h-full bg-slate-800 p-6 flex flex-col">
                         <div class="flex-1 bg-slate-700 rounded-lg overflow-hidden mb-4">
-                            <img src="./public/images/project-ov.png" alt="Projet 1"
+                            <img src="images/project-ov.png" alt="Projet 1"
                                 class="w-full h-full object-cover contains">
                         </div>
                         <h3 class="text-xl font-bold">Plateforme E-commerce</h3>
@@ -459,7 +459,7 @@
                 <div class="project-inner relative w-full h-full">
                     <div class="project-front absolute w-full h-full bg-slate-800 p-6 flex flex-col">
                         <div class="flex-1 bg-slate-700 rounded-lg overflow-hidden mb-4">
-                            <img src="./public/images/project-ov.png" alt="Projet 2" class="w-full h-full object-cover">
+                            <img src="images/project-ov.png" alt="Projet 2" class="w-full h-full object-cover">
                         </div>
                         <h3 class="text-xl font-bold">Application de gestion</h3>
                         <p class="text-slate-400 text-sm">Vue.js, Python, PostgreSQL</p>
@@ -496,7 +496,7 @@
                 <div class="project-inner relative w-full h-full">
                     <div class="project-front absolute w-full h-full bg-slate-800 p-6 flex flex-col">
                         <div class="flex-1 bg-slate-700 rounded-lg overflow-hidden mb-4">
-                            <img src="./public/images/project-ov.png" alt="Projet 3" class="w-full h-full object-cover">
+                            <img src="images/project-ov.png" alt="Projet 3" class="w-full h-full object-cover">
                         </div>
                         <h3 class="text-xl font-bold">Réseau social</h3>
                         <p class="text-slate-400 text-sm">React, GraphQL, Firebase</p>
@@ -533,7 +533,7 @@
                 <div class="project-inner relative w-full h-full">
                     <div class="project-front absolute w-full h-full bg-slate-800 p-6 flex flex-col">
                         <div class="flex-1 bg-slate-700 rounded-lg overflow-hidden mb-4">
-                            <img src="./public/images/project-ov.png" alt="Projet 4" class="w-full h-full object-cover">
+                            <img src="images/project-ov.png" alt="Projet 4" class="w-full h-full object-cover">
                         </div>
                         <h3 class="text-xl font-bold">Tableau de bord analytique</h3>
                         <p class="text-slate-400 text-sm">Vue.js, D3.js, Express</p>
@@ -570,7 +570,7 @@
                 <div class="project-inner relative w-full h-full">
                     <div class="project-front absolute w-full h-full bg-slate-800 p-6 flex flex-col">
                         <div class="flex-1 bg-slate-700 rounded-lg overflow-hidden mb-4">
-                            <img src="./public/images/project-ov.png" alt="Projet 5" class="w-full h-full object-cover">
+                            <img src="images/project-ov.png" alt="Projet 5" class="w-full h-full object-cover">
                         </div>
                         <h3 class="text-xl font-bold">Application mobile</h3>
                         <p class="text-slate-400 text-sm">React Native, Firebase</p>
@@ -607,7 +607,7 @@
                 <div class="project-inner relative w-full h-full">
                     <div class="project-front absolute w-full h-full bg-slate-800 p-6 flex flex-col">
                         <div class="flex-1 bg-slate-700 rounded-lg overflow-hidden mb-4">
-                            <img src="./public/images/project-ov.png" alt="Projet 6" class="w-full h-full object-cover">
+                            <img src="images/project-ov.png" alt="Projet 6" class="w-full h-full object-cover">
                         </div>
                         <h3 class="text-xl font-bold">Portfolio artistique</h3>
                         <p class="text-slate-400 text-sm">Next.js, Tailwind CSS, Sanity</p>
@@ -796,7 +796,7 @@
         <i class="fas fa-arrow-up"></i>
     </button>
 
-    <script src="public/js/scripts.js"></script>
+    <script src="js/scripts.js"></script>
 </body>
 
 </html>
