feat : ajout des méta tags statiques

--- a/index.html
+++ b/index.html
@@ -1,9 +1,44 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Primary Meta Tags -->
+    <title>Aurès Assogba-zehe</title>
+    <meta name="title" content="Aurès Assogba-zehe " />
+    <meta
+      name="description"
+      content="Aurès Assogba-zehe est un développeur web fullstack spécialisé dans les technologies front-end avec javascript passionné de design et de créativité."
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://auresaz.vercel.app/" />
+    <meta property="og:title" content="Aurès Assogba-zehe " />
+    <meta
+      property="og:description"
+      content="Aurès Assogba-zehe est un développeur web fullstack spécialisé dans les technologies front-end avec javascript passionné de design et de créativité."
+    />
+    <meta
+      property="og:image"
+      content="https://metatags.io/images/meta-tags.png"
+    />
+
+    <!-- X (Twitter) -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://auresaz.vercel.app/" />
+    <meta property="twitter:title" content="Aurès Assogba-zehe " />
+    <meta
+      property="twitter:description"
+      content="Aurès Assogba-zehe est un développeur web fullstack spécialisé dans les technologies front-end avec javascript passionné de design et de créativité."
+    />
+    <meta
+      property="twitter:image"
+      content="https://metatags.io/images/meta-tags.png"
+    />
+
+    <!-- Meta Tags Generated with https://metatags.io -->
     <title>Aurès Futuristic Creative Portfolio</title>
   </head>
   <body>
