--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     />
     <meta
       property="og:image"
-      content="https://metatags.io/images/meta-tags.png"
+      content="/meta-tags.png"
     />
 
     <!-- X (Twitter) -->
@@ -35,7 +35,7 @@
     />
     <meta
       property="twitter:image"
-      content="https://metatags.io/images/meta-tags.png"
+      content="/meta-tags.png"
     />
 
     <!-- Meta Tags Generated with https://metatags.io -->
